# linkers-archive

./: .env.example  .gitignore  BRANCH_PROTECTION.md  CONTRIBUTING.md  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
linkers_archive/collectors/: discord_collector.py  twitch_collector.py  websocket_collector.py
linkers_archive/data/: schema.sql  utils.py
scripts/: count_links.py  export_links.py  inspect_db.py  show_recent_links.py
src/: __init__.py  main.py  utils.py
src/collectors/: discord_collector.py  twitch_collector.py  websocket_collector.py
src/db/: utils.py
src/linkers_archive/: __init__.py  cli.py
src/linkers_archive/scripts/: export_links.py
tests/: test_basic.py  test_cli.py  test_echo.py
