[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkers-archive"
version = "0.0.1"
description = "A small archive for linkers-related utilities."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://example.com/linkers-archive"
"Repository" = "https://example.com/linkers-archive.git"

[tool.black]
line-length = 88

[project.scripts]
"linkers-archive" = "linkers_archive.cli:main"
